k8s/codebeamer-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: codebeamer-app
  name: codebeamer-app
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: codebeamer-app
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        io.kompose.network/codebeamer-default: "true"
        io.kompose.service: codebeamer-app
    spec:
      containers:
        - env:
            - name: CB_database_JDBC_ConnectionURL
              value: jdbc:mysql://codebeamer-db:3306/codebeamer?autoReconnect=true&zeroDateTimeBehavior=convertToNull&emulateLocators=true&characterEncoding=UTF-8&useSSL=false
            - name: CB_database_JDBC_Driver
              value: com.mysql.jdbc.Driver
            - name: CB_database_JDBC_Password
              value: pass
            - name: CB_database_JDBC_Timeout
              value: "120"
            - name: CB_database_JDBC_Username
              value: user
            - name: JVM_OPTIONS
              value: ' -Djdk.tls.ephemeralDHKeySize=4096'
            - name: TOMCAT_CONNECTOR_KEYSTORE_FILE
              value: '/etc/ssl/domain.p12'
            - name: TOMCAT_CONNECTOR_KEYSTORE_PASS
              value: 'Swqa1234!'           
            - name: WAIT_HOSTS
              value: codebeamer-db:3306
            - name: WAIT_HOSTS_TIMEOUT
              value: "120"
          image: intland/codebeamer:21.09-lts
          name: codebeamer-app
          ports:
            - containerPort: 8090
              hostPort: 9000
              protocol: TCP
          resources: {}
          volumeMounts:
            - mountPath: /etc/ssl  # The mount path
              name: codebeamer-app-keystore
            - mountPath: /home/appuser/codebeamer/repository/config/logo
              name: codebeamer-app-logo
            - mountPath: /home/appuser/codebeamer/repository/docs
              name: codebeamer-app-docs
            - mountPath: /home/appuser/codebeamer/repository/search
              name: codebeamer-app-search
            - mountPath: /home/appuser/codebeamer/logs
              name: codebeamer-app-logs-volume
            - mountPath: /home/appuser/codebeamer/tomcat/tmp
              name: codebeamer-app-tomcat
      restartPolicy: Always
      volumes:
        - name: codebeamer-app-keystore
          secret:
            secretName: codebeamer-app-certificate-secret
            items:
              - key: domain.p12
                path: domain.p12
        - name: codebeamer-app-logo
          persistentVolumeClaim:
            claimName: codebeamer-app-logo
        - name: codebeamer-app-docs
          persistentVolumeClaim:
            claimName: codebeamer-app-docs
        - name: codebeamer-app-search
          persistentVolumeClaim:
            claimName: codebeamer-app-search
        - name: codebeamer-app-logs-volume
          persistentVolumeClaim:
            claimName: codebeamer-app-logs-pvc
        - name: codebeamer-app-tomcat
          persistentVolumeClaim:
            claimName: codebeamer-app-tomcat
status: {}
