k8s/codebeamer-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: codebeamer-app
  name: codebeamer-app
spec:
  ports:
    - name: "9000"
      port: 9000
      targetPort: 8090
  selector:
    io.kompose.service: codebeamer-app
  type: LoadBalancer
