k8s/codebeamer-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: codebeamer-db
  name: codebeamer-db
spec:
  ports:
    - name: "3306"
      port: 3306
      targetPort: 3306
  selector:
    io.kompose.service: codebeamer-db
  #type: LoadBalancer
